--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,14 @@ before_script:
   curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev
   libx11-dev lib32z-dev ccache libgl1-mesa-dev libxml2-utils xsltproc unzip maven
   schedtool &> /dev/null
-- git clone https://sumitrajdev@bitbucket.org/sumitrajdev/twrp-5.1.1.git $HOME/tmp
-- mv $HOME/tmp/twrp-5.1.1.tar.xz $HOME/twrp.tar.xz
-- rm -rf tmp
-- wget https://github.com/TwrpBuilder/twrp-5.1.1-source/releases/download/initial/twrp-5.1.1.tar.xz
-  -O $HOME/twrp.tar.xz
+- wget https://github.com/kirito96/minimal-cm-twrp-source/releases/download/5.1-cm/twrp-5.1-cm.tar.xz -O $HOME/twrp.tar.xz
 - tar -xvf twrp.tar.xz &> log
+- mv $HOME/twrp-5.1-cm $HOME/twrp
 script:
 - cd $HOME/twrp
 - git clone https://github.com/TwrpBuilder/android_device_Accent_Speed_X2.git device/Accent/Speed_X2
 - rm -rf bootable/recovery
-- git clone https://github.com/omnirom/android_bootable_recovery.git bootable/recovery
+- git clone https://github.com/omnirom/android_bootable_recovery.git bootable/recovery-twrp
 - source build/envsetup.sh ; lunch cm_Speed_X2-eng
 - make -j16 recoveryimage
 - cd out/target/product/Speed_X2/
