--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,33 @@
-language: java
-jdk:
-- openjdk7
 sudo: required
+services:
+  - docker
+before_install:
+  - docker pull yshalsager/cyanogenmod:latest
 before_script:
-- cd $HOME
-- sudo apt-get install -y lzop git-core gnupg flex bison gperf build-essential zip
-  curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev
-  libx11-dev lib32z-dev ccache libgl1-mesa-dev libxml2-utils xsltproc unzip maven
-  schedtool &> /dev/null
-- wget https://github.com/kirito96/minimal-cm-twrp-source/releases/download/5.1-cm/twrp-5.1-cm.tar.xz -O $HOME/twrp.tar.xz
-- tar -xvf twrp.tar.xz &> log
-- mv $HOME/twrp-5.1-cm $HOME/twrp
+- cd $HOME && mkdir twrp
+- wget -q https://github.com/kirito96/minimal-cm-twrp-source/releases/download/5.1-cm/twrp-5.1-cm.tar.xz
+  -O $HOME/twrp.tar.xz
+- tar -xJf twrp.tar.xz --directory $HOME/twrp/ && rm twrp.tar.xz
 script:
-- cd $HOME/twrp
-- git clone https://github.com/TwrpBuilder/android_device_Accent_Speed_X2.git device/Accent/Speed_X2
-- rm -rf bootable/recovery
-- git clone https://github.com/omnirom/android_bootable_recovery.git bootable/recovery-twrp
-- source build/envsetup.sh ; lunch cm_Speed_X2-eng
-- make -j16 recoveryimage
-- cd out/target/product/Speed_X2/
+  - cd $HOME/twrp/ && git clone https://github.com/TwrpBuilder/android_device_Accent_Speed_X2.git device/Accent/Speed_X2
+  - rm -rf bootable/recovery && git clone https://github.com/omnirom/android_bootable_recovery.git bootable/recovery
+  - |
+    docker run --rm -i -e USER_ID=$(id -u) -e GROUP_ID=$(id -g) -v "$(pwd):/home/cmbuild/twrp/:rw,z" yshalsager/cyanogenmod bash << EOF
+    cd /home/cmbuild/twrp/
+    source build/envsetup.sh ; lunch cm_Speed_X2-eng ; make -j16 recoveryimage
+    exit
+    EOF
+after_success:
+  - export version=$(cat bootable/recovery/variables.h | grep "define TW_MAIN_VERSION_STR" | cut -d '"' -f2)
+  - cp $HOME/twrp/out/target/product/Speed_X2/recovery.img $HOME/twrp/TWRP-$version-Speed_X2-$(date +"%Y%m%d").img
 
 deploy:
   skip_cleanup: true
   provider: releases
   api_key: "$GIT_OAUTH_TOKEN_TB"
-  file: "$HOME/twrp/out/target/product/Speed_X2/recovery.img"
+  file_glob: true
+  file: $HOME/twrp/*.img
   on:
+    tags: false
     repo: TwrpBuilder/android_device_Accent_Speed_X2
+    branch: master
